--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "parcel --open",
     "build": "parcel build"
- },
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/st3adyp1ck/nucampsite.git"
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/st3adyp1ck/nucampsite#readme",
   "devDependencies": {
+    "@parcel/transformer-sass": "^2.12.0",
     "parcel": "^2.12.0"
   },
   "dependencies": {
